# fail-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
.github/workflows/: ci.yml
src/: lib.rs
tests/: no_use_import_tests.rs  tests.rs
