[package]
name = "fail"
version = "0.3.0"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["failpoints", "fail"]
repository = "https://github.com/pingcap/fail-rs"
readme = "README.md"
homepage = "https://github.com/pingcap/fail-rs"
documentation = "https://docs.rs/fail"
description = "Failpoints for rust."
categories = ["development-tools::testing"]
edition = "2018"
exclude = ["/.github/*", "/.travis.yml", "/appveyor.yml"]

[dependencies]
log = { version = "0.4", features = ["std"] }
lazy_static = "1.2"
rand = "0.7"

[features]
failpoints = []

[badges]
travis-ci = { repository = "pingcap/fail-rs" }
appveyor = { repository = "busyjay/fail-rs" }

[package.metadata.docs.rs]
all-features = true
