[package]
name = "fail"
version = "0.5.1"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["failpoints", "fail"]
repository = "https://github.com/tikv/fail-rs"
readme = "README.md"
homepage = "https://github.com/tikv/fail-rs"
documentation = "https://docs.rs/fail"
description = "Fail points for rust."
categories = ["development-tools::testing"]
edition = "2021"
exclude = ["/.github/*", "/.travis.yml", "/appveyor.yml"]

[dependencies]
futures = { version = "0.3", optional = true }
log = { version = "0.4", features = ["std"] }
once_cell = "1.9.0"
rand = "0.8"
tokio = { version = "1.32", features = [ "sync" ] }

[dev-dependencies]
tokio = { version = "1.32", features = [ "sync", "rt-multi-thread", "time", "macros" ] }

[features]
failpoints = []
async = [ "futures" ]

[package.metadata.docs.rs]
all-features = true
